# nft-registry

./: .travis.yml  Cargo.toml  README.md  readme.txt
contract/: Cargo.toml  lib.rs
contract/.ink/abi_gen/: Cargo.toml  main.rs
contract/call/: Cargo.toml
contract/call/src/: calls.rs  lib.rs
contract/validation/: Cargo.toml  lib.rs
contract/validation/.ink/abi_gen/: Cargo.toml
src/: anchor.rs  erc721.rs  lib.rs  mock.rs  proofs.rs  tests.rs  tests.rs.bak
src/erc721/: mock.rs  mod.rs  tests.rs
