[package]
name = "nftregistry"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'node-primitives/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'pallet-timestamp/std',
    'randomness-collective-flip/std',
    'contracts/std',
    'balances/std',
    'node-runtime/std',
    'ink-core/std',
    'ink-utils/std',
]

[dependencies.serde]
version = "1.0.102"
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.6'

[dependencies.contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-contracts'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.node-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.sp-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.sp-runtime]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-runtime'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.sp-std]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-std'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.sp-core]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.pallet-timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.node-runtime]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-runtime'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.ink-core]
default-features = false
git = "https://github.com/paritytech/ink"
package = "ink_core"
rev = '03825afbe66b68e58df9d2be9d34570718bfbcf7'

[dependencies.ink-utils]
default-features = false
git = "https://github.com/paritytech/ink"
package = "ink_utils"
rev = '03825afbe66b68e58df9d2be9d34570718bfbcf7'

[dependencies.wabt]
version = "0.9.2"
